# lib-ml

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml  test.yml
lib-ml/: preprocessing.py
lib_ml/: preprocessing.py
lib_ml_group3/: load_model.py  preprocessing.py
tests/: test_features_data.py
