[tool.poetry]
name = "lib-ml-group3"
version = "0.3.4"
description = "A library for pre-processing data used in machine learning models"
authors = ["Jasper Bruin <j.jasperbruin@tudelft.nl>"]
readme = "README.md"
repository = "https://github.com/remla24-team3/lib-ml"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.23.4"
pylint = "3.1.0"
keras = "^3.3.3"
tensorflow = "^2.16.1"
scikit-learn = "^1.4.2"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
